--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Shipping.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Shipping.cshtml
@@ -22,7 +22,6 @@
             $('#pnlValueOfXincltax').hide();
         }
     }
-
 </script>
     
     <div class="section-header">
@@ -34,13 +33,16 @@
             <button type="submit" name="save" value="save" class="btn btn-primary"><i class="icon-ok icon-white"></i>&nbsp;@T("Admin.Common.Save")</button>
         </div>
     </div>
-@Html.ValidationSummary(false)
+	@Html.Action("StoreScopeConfiguration", "Setting")
+	@Html.ValidationSummary(false)
+
     <table class="adminContent">
         <tr>
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.FreeShippingOverXEnabled)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => Model.FreeShippingOverXEnabled, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.FreeShippingOverXEnabled)
                 @Html.ValidationMessageFor(model => model.FreeShippingOverXEnabled)
             </td>
@@ -50,6 +52,7 @@
                 @Html.SmartLabelFor(model => model.FreeShippingOverXValue)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => Model.FreeShippingOverXValue, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.FreeShippingOverXValue)
                 @Html.ValidationMessageFor(model => model.FreeShippingOverXValue)
             </td>
@@ -59,6 +62,7 @@
                 @Html.SmartLabelFor(model => model.FreeShippingOverXIncludingTax)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => Model.FreeShippingOverXIncludingTax, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.FreeShippingOverXIncludingTax)
                 @Html.ValidationMessageFor(model => model.FreeShippingOverXIncludingTax)
             </td>
@@ -68,6 +72,7 @@
                 @Html.SmartLabelFor(model => model.EstimateShippingEnabled)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => Model.EstimateShippingEnabled, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.EstimateShippingEnabled)
                 @Html.ValidationMessageFor(model => model.EstimateShippingEnabled)
             </td>
@@ -77,6 +82,7 @@
                 @Html.SmartLabelFor(model => model.DisplayShipmentEventsToCustomers)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => Model.DisplayShipmentEventsToCustomers, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.DisplayShipmentEventsToCustomers)
                 @Html.ValidationMessageFor(model => model.DisplayShipmentEventsToCustomers)
             </td>
@@ -88,13 +94,9 @@
         </tr>
         <tr>
             <td colspan="2">
+				@Html.OverrideStoreCheckboxFor(model => Model.ShippingOriginAddress, Model.ActiveStoreScopeConfiguration, "pnlShippingOriginAddress")
                 @Html.EditorFor(x => x.ShippingOriginAddress, "Address")
             </td>
         </tr>        
-        <tr class="adminSeparator">
-            <td colspan="2">
-                <hr />
-            </td>
-        </tr>
     </table>
 }
