--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Order.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Order.cshtml
@@ -16,6 +16,7 @@
             <button type="submit" name="save" value="save" class="btn btn-primary"><i class="icon-ok icon-white"></i>&nbsp;@T("Admin.Common.Save")</button>
         </div>
     </div>
+	@Html.Action("StoreScopeConfiguration", "Setting")
     @Html.ValidationSummary(false)
 
     
@@ -37,6 +38,7 @@
                 @Html.SmartLabelFor(model => model.IsReOrderAllowed)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => model.IsReOrderAllowed, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.IsReOrderAllowed)
                 @Html.ValidationMessageFor(model => model.IsReOrderAllowed)
             </td>
@@ -46,6 +48,7 @@
                 @Html.SmartLabelFor(model => model.MinOrderSubtotalAmount)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => model.MinOrderSubtotalAmount, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.MinOrderSubtotalAmount)
                 @Html.ValidationMessageFor(model => model.MinOrderSubtotalAmount) @Model.PrimaryStoreCurrencyCode
             </td>
@@ -55,6 +58,7 @@
                 @Html.SmartLabelFor(model => model.MinOrderTotalAmount)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => model.MinOrderTotalAmount, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.MinOrderTotalAmount)
                 @Html.ValidationMessageFor(model => model.MinOrderTotalAmount) @Model.PrimaryStoreCurrencyCode
             </td>
@@ -64,6 +68,7 @@
                 @Html.SmartLabelFor(model => model.AnonymousCheckoutAllowed)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => model.AnonymousCheckoutAllowed, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.AnonymousCheckoutAllowed)
                 @Html.ValidationMessageFor(model => model.AnonymousCheckoutAllowed)
             </td>
@@ -73,6 +78,7 @@
                 @Html.SmartLabelFor(model => model.TermsOfServiceEnabled)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => model.TermsOfServiceEnabled, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.TermsOfServiceEnabled)
                 @Html.ValidationMessageFor(model => model.TermsOfServiceEnabled)
             </td>
@@ -82,6 +88,7 @@
                 @Html.SmartLabelFor(model => model.OnePageCheckoutEnabled)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => model.OnePageCheckoutEnabled, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.OnePageCheckoutEnabled)
                 @Html.ValidationMessageFor(model => model.OnePageCheckoutEnabled)
             </td>
@@ -133,6 +140,7 @@
                 @Html.SmartLabelFor(model => model.ReturnRequestsEnabled)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => model.ReturnRequestsEnabled, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.ReturnRequestsEnabled)
                 @Html.ValidationMessageFor(model => model.ReturnRequestsEnabled)
             </td>
@@ -142,6 +150,7 @@
                 @Html.SmartLabelFor(model => model.NumberOfDaysReturnRequestAvailable)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => model.NumberOfDaysReturnRequestAvailable, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.NumberOfDaysReturnRequestAvailable)
                 @Html.ValidationMessageFor(model => model.NumberOfDaysReturnRequestAvailable)
             </td>
