--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Media.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Media.cshtml
@@ -31,8 +31,9 @@
             }
         }
     </script>
-    
-@Html.ValidationSummary(false)
+	@Html.Action("StoreScopeConfiguration", "Setting")
+	@Html.ValidationSummary(false)
+
     <table class="adminContent">
         <tr>
             <td class="adminTitle">
@@ -57,6 +58,7 @@
                 @Html.SmartLabelFor(model => model.AvatarPictureSize)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => Model.AvatarPictureSize, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.AvatarPictureSize)
                 @Html.ValidationMessageFor(model => model.AvatarPictureSize)
             </td>
@@ -66,6 +68,7 @@
                 @Html.SmartLabelFor(model => model.ProductThumbPictureSize)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => Model.ProductThumbPictureSize, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.ProductThumbPictureSize)
                 @Html.ValidationMessageFor(model => model.ProductThumbPictureSize)
             </td>
@@ -75,6 +78,7 @@
                 @Html.SmartLabelFor(model => model.ProductThumbPictureSizeOnProductDetailsPage)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => Model.ProductThumbPictureSizeOnProductDetailsPage, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.ProductThumbPictureSizeOnProductDetailsPage)
                 @Html.ValidationMessageFor(model => model.ProductThumbPictureSizeOnProductDetailsPage)
             </td>
@@ -84,6 +88,7 @@
                 @Html.SmartLabelFor(model => model.ProductDetailsPictureSize)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => Model.ProductDetailsPictureSize, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.ProductDetailsPictureSize)
                 @Html.ValidationMessageFor(model => model.ProductDetailsPictureSize)
             </td>
@@ -93,6 +98,7 @@
                 @Html.SmartLabelFor(model => model.DefaultPictureZoomEnabled)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => Model.DefaultPictureZoomEnabled, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.DefaultPictureZoomEnabled)
                 @Html.ValidationMessageFor(model => model.DefaultPictureZoomEnabled)
             </td>
@@ -102,6 +108,7 @@
                 @Html.SmartLabelFor(model => model.PictureZoomType)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => Model.PictureZoomType, Model.ActiveStoreScopeConfiguration)
                 @Html.DropDownListFor(model => model.PictureZoomType, Model.AvailablePictureZoomTypes)
                 @Html.ValidationMessageFor(model => model.PictureZoomType)
             </td>
@@ -111,6 +118,7 @@
                 @Html.SmartLabelFor(model => model.ProductVariantPictureSize)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => Model.ProductVariantPictureSize, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.ProductVariantPictureSize)
                 @Html.ValidationMessageFor(model => model.ProductVariantPictureSize)
             </td>
@@ -120,6 +128,7 @@
                 @Html.SmartLabelFor(model => model.CategoryThumbPictureSize)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => Model.CategoryThumbPictureSize, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.CategoryThumbPictureSize)
                 @Html.ValidationMessageFor(model => model.CategoryThumbPictureSize)
             </td>
@@ -129,6 +138,7 @@
                 @Html.SmartLabelFor(model => model.ManufacturerThumbPictureSize)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => Model.ManufacturerThumbPictureSize, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.ManufacturerThumbPictureSize)
                 @Html.ValidationMessageFor(model => model.ManufacturerThumbPictureSize)
             </td>
@@ -138,6 +148,7 @@
                 @Html.SmartLabelFor(model => model.CartThumbPictureSize)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => Model.CartThumbPictureSize, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.CartThumbPictureSize)
                 @Html.ValidationMessageFor(model => model.CartThumbPictureSize)
             </td>
@@ -147,6 +158,7 @@
                 @Html.SmartLabelFor(model => model.MiniCartThumbPictureSize)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => Model.MiniCartThumbPictureSize, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.MiniCartThumbPictureSize)
                 @Html.ValidationMessageFor(model => model.MiniCartThumbPictureSize)
             </td>
@@ -156,6 +168,7 @@
                 @Html.SmartLabelFor(model => model.MaximumImageSize)
             </td>
             <td class="adminData">
+				@Html.OverrideStoreCheckboxFor(model => Model.MaximumImageSize, Model.ActiveStoreScopeConfiguration)
                 @Html.EditorFor(model => model.MaximumImageSize)
                 @Html.ValidationMessageFor(model => model.MaximumImageSize)
             </td>
