ContentSlider: Minor code refactoring

--- a/src/Presentation/SmartStore.Web/Views/Home/ContentSlider.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Home/ContentSlider.cshtml
@@ -1,5 +1,6 @@
 ﻿@model ContentSliderSettings
 @using SmartStore.Core.Domain.Cms;
+@using SmartStore.Web.Framework.Themes;
 
 @functions
 {
@@ -13,6 +14,14 @@
         }
         
         return result;
+    }
+}
+
+@{
+    if (Model.IsActive) 
+    {
+        Html.AddCssFileParts(Url.ThemeAwareContent("Content/slider.less"));
+        Html.AddScriptParts("~/bundles/slider");
     }
 }
 
